k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume-website
  labels:
    name: resume-website
