k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developers-app
  namespace: resume-website
  labels:
    app: developers-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: developers-app
  template:
    metadata:
      labels:
        app: developers-app
    spec:
      containers:
        - name: developers-app
          image: zandergt/developers-app:latest
          ports:
            - containerPort: 3000
