k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developers-app
  namespace: resume-website
spec:
  selector:
    app: developers-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
