k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-website-ingress
  namespace: resume-website
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: aymanshehri.com
      http:
        paths:
          - backend:
              service:
                name: developer-app
                port:
                  number: 80
            path: /
            pathType: Prefix
